<resources>
    <string name="app_name">Task3</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="fiot">FIOT</string>
    <string name="ipsa">IPSA</string>
    <string name="htf">HTF</string>
    <string name="fsp">FSP</string>
    <string name="faculty">Faculty</string>
    <string name="course">Course</string>
    <string name="result">Result</string>
    <string name="open">Open</string>
    <string name="not_checked">not checked</string>
    <string name="save">Save</string>
    <string name="select">Select</string>
    <string name="delete">Delete</string>
    <string name="file_name">File name</string>
    <string name="io_error">IO Error</string>
    <string name="saved">Saved</string>
    <string name="error_input">Error input</string>
    <string name="storage_empty">Storage empty</string>
</resources>
