<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CourseFragment">

    <RadioGroup
        android:id="@+id/courseRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/course1RadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_1" />

        <RadioButton
            android:id="@+id/course2RadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_2" />

        <RadioButton
            android:id="@+id/course3RadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_3" />

        <RadioButton
            android:id="@+id/course4RadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_4" />

        <RadioButton
            android:id="@+id/course5RadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_5" />

        <RadioButton
            android:id="@+id/course6RadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_6" />
    </RadioGroup>
</FrameLayout>