<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FacultyFragment">

    <RadioGroup
        android:id="@+id/facultyRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/fiotRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fiot" />

        <RadioButton
            android:id="@+id/ipsaRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ipsa" />

        <RadioButton
            android:id="@+id/htfRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/htf" />

        <RadioButton
            android:id="@+id/fspRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fsp" />
    </RadioGroup>
</FrameLayout>